--- a/Trabalho/src/br/com/academia/controle/AtividadeFisica.fxml
+++ b/Trabalho/src/br/com/academia/controle/AtividadeFisica.fxml
@@ -115,11 +115,13 @@
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="671.0" prefWidth="808.0" style="-fx-background-color: #4ABDAC;">
                      <children>
-                        <GridPane fx:id="gridEdicao" layoutX="185.0" layoutY="101.0" prefHeight="240.0" prefWidth="176.0">
+                        <GridPane fx:id="gridEdicao" layoutX="185.0" layoutY="60.0" prefHeight="281.0" prefWidth="176.0">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.6666259765625" minWidth="10.0" prefWidth="132.0" />
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="154.6666259765625" minWidth="10.0" prefWidth="132.0" />
                           </columnConstraints>
                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -129,13 +131,18 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <TextField fx:id="tfNome" promptText="Nome" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" />
-                              <TextField fx:id="tfSexo" promptText="Sexo" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="1" />
-                              <TextField fx:id="tfAltura" promptText="Altura" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="2" />
-                              <TextField fx:id="tfPeso" promptText="Peso" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="3" />
-                              <TextField fx:id="tfEmail" promptText="E-mail" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="4" />
-                              <TextField fx:id="tfCPF" promptText="CPF" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="5" />
-                              <TextField fx:id="tfWpp" promptText="Whatsapp" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="6" />
+                              <TextField fx:id="tfNome" promptText="Nome" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="2" />
+                              <TextField fx:id="tfSexo" promptText="Sexo" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="3" />
+                              <TextField fx:id="tfAltura" promptText="Altura" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="4" />
+                              <TextField fx:id="tfPeso" promptText="Peso" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="5" />
+                              <TextField fx:id="tfEmail" promptText="E-mail" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="6" />
+                              <TextField fx:id="tfCPF" promptText="CPF" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="7" />
+                              <TextField fx:id="tfWpp" promptText="Whatsapp" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="8" />
+                              <Label text="Alunos">
+                                 <font>
+                                    <Font name="Calibri" size="46.0" />
+                                 </font>
+                              </Label>
                            </children>
                         </GridPane>
                         <HBox alignment="CENTER_LEFT" layoutX="192.0" layoutY="366.0" prefHeight="34.0" prefWidth="144.0">
@@ -190,16 +197,23 @@
                   </AnchorPane>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="671.0" prefWidth="808.0" style="-fx-background-color: #4ABDAC;">
                      <children>
-                        <GridPane fx:id="gridEdicao1" layoutX="185.0" layoutY="101.0" prefHeight="113.0" prefWidth="176.0">
+                        <GridPane fx:id="gridEdicao1" layoutX="185.0" layoutY="47.0" prefHeight="167.0" prefWidth="158.0">
                            <children>
-                              <TextField fx:id="tfUser" promptText="Usuário" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" />
-                              <TextField fx:id="tfSenha" promptText="Senha" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="1" />
-                              <TextField fx:id="tfPapel" promptText="Papel" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="2" />
+                              <TextField fx:id="tfUser" promptText="Usuário" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="2" />
+                              <TextField fx:id="tfSenha" promptText="Senha" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="3" />
+                              <TextField fx:id="tfPapel" promptText="Papel" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="4" />
+                              <Label text="Usuários">
+                                 <font>
+                                    <Font name="Calibri" size="41.0" />
+                                 </font>
+                              </Label>
                            </children>
                            <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.6666259765625" minWidth="10.0" prefWidth="132.0" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="154.6666259765625" minWidth="10.0" prefWidth="132.0" />
                            </columnConstraints>
                            <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -252,19 +266,26 @@
                   </AnchorPane>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="671.0" prefWidth="808.0" style="-fx-background-color: #4ABDAC;">
                      <children>
-                        <GridPane fx:id="gridEdicao22" layoutX="185.0" layoutY="101.0" prefHeight="178.0" prefWidth="176.0">
+                        <GridPane fx:id="gridEdicao22" layoutX="185.0" layoutY="39.0" prefHeight="240.0" prefWidth="176.0">
                            <children>
-                              <TextField fx:id="tfAtividade" promptText="Atividade" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" />
-                              <TextField fx:id="tfTempo" promptText="Tempo" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="1" />
-                              <TextField fx:id="tfDuracao" promptText="Duração" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="2" />
-                              <TextField fx:id="tfDistancia" promptText="Distância" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="3" />
-                              <TextField fx:id="tfCalorias" promptText="Calorias Perdidas" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="4" />
-                              <TextField fx:id="tfPassos" promptText="Passos" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="5" />
+                              <TextField fx:id="tfAtividade" promptText="Atividade" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="2" />
+                              <TextField fx:id="tfTempo" promptText="Tempo" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="3" />
+                              <TextField fx:id="tfDuracao" promptText="Duração" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="4" />
+                              <TextField fx:id="tfDistancia" promptText="Distância" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="5" />
+                              <TextField fx:id="tfCalorias" promptText="Calorias Perdidas" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="6" />
+                              <TextField fx:id="tfPassos" promptText="Passos" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="7" />
+                              <Label text="Atividade Básica">
+                                 <font>
+                                    <Font name="Calibri" size="23.0" />
+                                 </font>
+                              </Label>
                            </children>
                            <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.6666259765625" minWidth="10.0" prefWidth="132.0" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="154.6666259765625" minWidth="10.0" prefWidth="132.0" />
                            </columnConstraints>
                            <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -329,23 +350,30 @@
                   </AnchorPane>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="671.0" prefWidth="526.0" style="-fx-background-color: #4ABDAC;">
                      <children>
-                        <GridPane fx:id="gridEdicao221" layoutX="151.0" layoutY="101.0" prefHeight="294.0" prefWidth="155.0">
+                        <GridPane fx:id="gridEdicao221" layoutX="151.0" layoutY="36.0" prefHeight="367.0" prefWidth="155.0">
                            <children>
-                              <TextField fx:id="tfAtividadeC" promptText="Atividade" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" />
-                              <TextField fx:id="tfTempoC" promptText="Tempo" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="1" />
-                              <TextField fx:id="tfDuracaoC" promptText="Duração" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="2" />
-                              <TextField fx:id="tfDistanciaC" promptText="Distância" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="3" />
-                              <TextField fx:id="tfCaloriasC" promptText="Calorias Perdidas" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="4" />
-                              <TextField fx:id="tfPassosC" promptText="Passos" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="5" />
-                              <TextField fx:id="tfVelMed" promptText="Velocidade Média" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="6" />
-                              <TextField fx:id="tfVelMax" promptText="Velocidade Máxima" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="7" />
-                              <TextField fx:id="tfMaiorEl" promptText="Maior Elevação" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="8" />
-                              <TextField fx:id="tfMenorEl" promptText="Menor Elevação" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="9" />
+                              <TextField fx:id="tfAtividadeC" promptText="Atividade" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="2" />
+                              <TextField fx:id="tfTempoC" promptText="Tempo" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="3" />
+                              <TextField fx:id="tfDuracaoC" promptText="Duração" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="4" />
+                              <TextField fx:id="tfDistanciaC" promptText="Distância" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="5" />
+                              <TextField fx:id="tfCaloriasC" promptText="Calorias Perdidas" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="6" />
+                              <TextField fx:id="tfPassosC" promptText="Passos" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="7" />
+                              <TextField fx:id="tfVelMed" promptText="Velocidade Média" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="8" />
+                              <TextField fx:id="tfVelMax" promptText="Velocidade Máxima" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="9" />
+                              <TextField fx:id="tfMaiorEl" promptText="Maior Elevação" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="10" />
+                              <TextField fx:id="tfMenorEl" promptText="Menor Elevação" style="-fx-border-color: #FC4A1A; -fx-border-radius: 5;" GridPane.rowIndex="11" />
+                              <Label text="Atividade Completa">
+                                 <font>
+                                    <Font name="Calibri" size="19.0" />
+                                 </font>
+                              </Label>
                            </children>
                            <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.6666259765625" minWidth="10.0" prefWidth="132.0" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="154.6666259765625" minWidth="10.0" prefWidth="132.0" />
                            </columnConstraints>
                            <rowConstraints>
+                              <RowConstraints maxHeight="29.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="29.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints maxHeight="29.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
                               <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -506,7 +534,7 @@
             </TabPane>
          </children>
       </HBox>
-      <MenuBar prefHeight="26.0" prefWidth="1280.0" style="-fx-background-color: #FC4A1A;">
+      <MenuBar prefHeight="26.0" prefWidth="1280.0" style="-fx-background-color: #F7B733;">
         <menus>
           <Menu mnemonicParsing="false" text="Arquivo">
             <items>
@@ -516,6 +544,7 @@
                      </accelerator>
                   </MenuItem>
                   <MenuItem mnemonicParsing="false" onAction="#exportaPDF" text="Exportar PDF..." />
+                  <MenuItem mnemonicParsing="false" onAction="#encerraSessao" text="Encerrar Sessão" />
                   <MenuItem mnemonicParsing="false" onAction="#sair" text="Sair" />
             </items>
           </Menu>
@@ -708,7 +737,7 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <BarChart fx:id="graficoColunasDuracaoCompleto" title="Duração do Exercício">
+                              <BarChart fx:id="graficoColunasDuracaoCompleto" prefHeight="459.0" prefWidth="689.0" title="Duração do Exercício">
                                 <xAxis>
                                   <CategoryAxis label="Data" side="BOTTOM" />
                                 </xAxis>
@@ -724,7 +753,7 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <BarChart fx:id="graficoColunasDistanciaCompleto" title="Distância Percorrida">
+                              <BarChart fx:id="graficoColunasDistanciaCompleto" prefHeight="459.0" prefWidth="689.0" title="Distância Percorrida">
                                 <xAxis>
                                   <CategoryAxis label="Distância" side="BOTTOM" />
                                 </xAxis>
@@ -740,7 +769,7 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <BarChart fx:id="graficoColunasCaloriasCompleto" title="Calorias Perdidas">
+                              <BarChart fx:id="graficoColunasCaloriasCompleto" prefHeight="460.0" prefWidth="681.0" title="Calorias Perdidas">
                                 <xAxis>
                                   <CategoryAxis label="Data" side="BOTTOM" />
                                 </xAxis>
@@ -756,7 +785,7 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <BarChart fx:id="graficoColunasPassosCompleto" title="Total de Passos">
+                              <BarChart fx:id="graficoColunasPassosCompleto" prefHeight="460.0" prefWidth="689.0" title="Total de Passos">
                                 <xAxis>
                                   <CategoryAxis label="Data" side="BOTTOM" />
                                 </xAxis>
@@ -772,7 +801,7 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <BarChart fx:id="graficoColunasVelocidadeCompleto" title="Velocidade">
+                              <BarChart fx:id="graficoColunasVelocidadeCompleto" prefHeight="460.0" prefWidth="689.0" title="Velocidade">
                                 <xAxis>
                                   <CategoryAxis label="Data" side="BOTTOM" />
                                 </xAxis>
